--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "eslint": "^2.4.0",
     "eslint-config-airbnb": "^6.1.0",
     "eslint-plugin-react": "^4.2.3",
-    "get-json-lite": "^2.0.0",
     "nba-shot-zones": "^1.0.1",
     "rimraf": "^2.5.2",
     "rollup": "^0.25.4",
     "rollup-plugin-babel": "^2.4.0"
-  }
+  },
+  "dependencies": {}
 }
