--- a/package.json
+++ b/package.json
@@ -35,5 +35,7 @@
     "rollup": "^0.25.4",
     "rollup-plugin-babel": "^2.4.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "d3-array": "^0.7.1"
+  }
 }
