--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "npm run clean && npm run build:cjs && npm run build:es6",
     "prepublish": "BABEL_ENV=rollup npm run lint && npm run build",
     "lint": "eslint src",
-    "test": "node test/index.js | faucet"
+    "test": "mocha test",
+    "test:watch": "npm test -- --watch"
   },
   "repository": {
     "type": "git",
@@ -28,10 +29,12 @@
     "babel-plugin-syntax-object-rest-spread": "^6.5.0",
     "babel-plugin-transform-object-rest-spread": "^6.6.5",
     "babel-preset-es2015-rollup": "^1.1.1",
+    "chai": "^3.5.0",
     "eslint": "^2.4.0",
     "eslint-config-airbnb": "^6.1.0",
     "eslint-plugin-react": "^4.2.3",
     "faucet": "0.0.1",
+    "mocha": "^2.4.5",
     "rimraf": "^2.5.2",
     "rollup": "^0.25.4",
     "rollup-plugin-babel": "^2.4.0",
