--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "test": "mocha test",
     "test:watch": "npm test -- --watch"
   },
+	"pre-commit": [
+		"lint",
+		"test"
+	],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/BostonGlobe/charts.git"
@@ -35,6 +39,7 @@
     "eslint-plugin-react": "^4.2.3",
     "faucet": "0.0.1",
     "mocha": "^2.4.5",
+    "pre-commit": "^1.1.2",
     "rimraf": "^2.5.2",
     "rollup": "^0.25.4",
     "rollup-plugin-babel": "^2.4.0",
