--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,6 @@
 {
-	"presets": ["es2015-rollup"],
-	"plugins": [
-		"syntax-object-rest-spread",
-		"transform-object-rest-spread"
+	"presets": [
+		"es2015",
+		"stage-1"
 	]
 }
