--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "jsnext:main": "build/index.es6.js",
   "scripts": {
     "clean": "rimraf build",
-    "build:cjs": "rollup -c -f cjs -i index.js -o build/index.js",
-    "build:es6": "rollup -c        -i index.js -o build/index.es6.js",
+    "build:cjs": "rollup -c -f cjs -i src/index.js -o build/index.js",
+    "build:es6": "rollup -c        -i src/index.js -o build/index.es6.js",
     "build": "npm run clean && npm run build:cjs && npm run build:es6",
     "prepublish": "BABEL_ENV=rollup npm run lint && npm run build",
     "lint": "eslint src",
-    "test": "npm run build && mocha test",
+    "test": "mocha --compilers js:babel-core/register test/*.js",
     "test:watch": "npm test -- --watch"
   },
   "pre-commit": [
@@ -29,10 +29,14 @@
   },
   "homepage": "https://github.com/BostonGlobe/charts#readme",
   "devDependencies": {
+    "babel-core": "^6.7.6",
     "babel-eslint": "^6.0.0-beta.6",
     "babel-plugin-syntax-object-rest-spread": "^6.5.0",
     "babel-plugin-transform-object-rest-spread": "^6.6.5",
+    "babel-preset-es2015": "^6.6.0",
     "babel-preset-es2015-rollup": "^1.1.1",
+    "babel-preset-stage-1": "^6.5.0",
+    "babel-register": "^6.7.2",
     "chai": "^3.5.0",
     "eslint": "^2.4.0",
     "eslint-config-airbnb": "^6.1.0",
