--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "d3-array": "^0.7.1",
     "datalib": "^1.6.3",
     "lodash": "^4.6.1",
+    "lodash.map": "^4.3.0",
     "lodash.mapvalues": "^4.3.0",
     "nba-shot-zones": "^1.0.1"
   }
