--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:es6": "rollup -c        -i src/index.js -o build/index.es6.js",
     "build": "npm run clean && npm run build:cjs && npm run build:es6",
     "prepublish": "BABEL_ENV=rollup npm run lint && npm run build",
-    "lint": "eslint src",
+    "lint": "eslint src test",
     "test": "mocha --compilers js:babel-core/register test/*.js",
     "test:watch": "npm test -- --watch"
   },
