--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
     "test:watch": "npm test -- --watch"
   },
   "pre-commit": [
-    "lint",
-    "test"
   ],
   "repository": {
     "type": "git",
@@ -52,6 +50,7 @@
   "dependencies": {
     "d3-array": "^0.7.1",
     "datalib": "^1.6.3",
+    "ent": "^2.2.0",
     "lodash": "^4.6.1",
     "lodash.map": "^4.3.0",
     "lodash.mapvalues": "^4.3.0",
