--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "test:watch": "npm test -- --watch"
   },
   "pre-commit": [
+    "lint",
+    "test"
   ],
   "repository": {
     "type": "git",
